syntax = "proto3";
option java_package = "jp.ac.tsukuba.eclab.koudounext.test.protobuf";

import "TestCondition.proto";

message TestAgent {
  string AgentUuid = 1;
  string AgentName = 2;
  repeated TestCondition Conditions = 3;
}